--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>iKenJ</title>
+    <link rel="stylesheet" href="./public/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header id="mainHeader" class="w-full bg-white md:bg-transparent z-[99] main-header relative md:absolute">
